# ArrayObject

./: README.md  spec.md
array-object/: Cargo.toml  README.md
array-object/src/: adaptor.rs  bitfield.rs  error.rs  lib.rs  misc.rs  storage.rs
array-object/src/convert/: from_complex.rs  from_integer.rs  from_real.rs  from_string.rs  into_complex.rs  into_integer.rs  into_real.rs  into_string.rs  mod.rs  zigzag.rs
array-object/src/pack/: mod.rs  pack.rs  pack_float.rs  pack_integer.rs  pack_string.rs  unpack.rs  unpack_float.rs  unpack_integer.rs  unpack_string.rs  varint.rs
array-object/tests/: complex.rs  external.rs  integer.rs  real.rs  string.rs
